Auto-generating HTTP clients from Swagger file
